# kafka-connector

./: Connector.md  README.md  Setup Oracle 19C.md  setup-sql-server.sql  startup-client.sh  startup-client2.sh  startup.sh
client-connector-base/: .env
code/: _consumer.py  automatizacao_connector.py  client1_settings.yml  client2_settings.yml  pyproject.toml  settings.yml  teste_carga.py  teste_carga_source.py
code/connectors_template/: conn_postgresql_sink_debezium_tmp.json
code/templates/: conn_postgresql_sink_avro_template.json
debezium-connector-base/: .env  docker-compose-base.yml
debezium-connector-base-client/: .env  docker-compose-base-client.yml  teste
debezium-connector-base-client/debezium-with-oracle-jdbc/: Dockerfile
debezium-connector-base/connectors/: oracle.json  oracle_v2.json  postgre-sink_v2.json  sql-server.json
debezium-connector-base/connectors_template/: oracle_v2.json  postgre-sink_v2.json  postgres-sink-jdbc.json
debezium-connector-base/debezium-with-oracle-jdbc/: Dockerfile
dev/: init-docker.sh
dev/client-connector-base/: docker-compose.yml
dev/code/: _consumer.py  automatizacao_connector.py  automatizacao_connector_v2.py  pyproject.toml  settings.yml  teste.py  teste_carga_source.py
dev/server-connector-base/: docker-compose.yml
dev/utils/: setup-connector-mssql.sh  startup-client.sh  startup.sh
prod/: init-docker.sh
prod/client-connector-base/: docker-compose.yml  signal-setup.sh  signal.sql  start.sh
prod/server-connector-base/: .env  (+2 more)
utils/: setup-connector-oracle.sh  setup-containers.sh  startup-client2.sh
(+27 files in other folders)
